<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1B5B4"
    tools:context=".fragments.add.AddFragment">

    <EditText
        android:id="@+id/subjectEditText"
        android:layout_width="317dp"
        android:layout_height="135dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_subject"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="@+id/titleEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleEditText"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="321dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="125dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/aclonica"
        android:paddingTop="20dp"
        android:text="@string/priority_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="163dp"
        android:layout_height="62dp"
        android:layout_marginTop="44dp"
        android:text="@string/button_create"
        app:layout_constraintEnd_toEndOf="@+id/subjectEditText"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/subjectEditText"
        app:layout_constraintTop_toBottomOf="@+id/subjectEditText" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="172dp"
        android:layout_height="55dp"
        android:entries="@array/spinner_items"
        app:layout_constraintBottom_toTopOf="@+id/titleEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

</androidx.constraintlayout.widget.ConstraintLayout>